successful pokemon catch

--- a/src/PokeCalc/Views/Home/Index.cshtml
+++ b/src/PokeCalc/Views/Home/Index.cshtml
@@ -7,3 +7,7 @@
 }
 
 <h2>helloowo df hia hg</h2>
+<button class="btn btn-default" data-request-url="@Url.Action("GetMoves", "Moves")">Get Result :)</button>
+<script>
+
+</script>
