--- a/src/PokeCalc/Views/Home/Index.cshtml
+++ b/src/PokeCalc/Views/Home/Index.cshtml
@@ -7,20 +7,33 @@
 }
 
 <h2>helloowo df hia hg</h2>
+<div class="player1 col-sm-6">
+    <form method="post" data-request-url="@Url.Action("GetMoves", "Moves")" class="first-pokemon">
 
-<form method="post" data-request-url="@Url.Action("GetMoves", "Moves")" class="first-pokemon">
+        <div class="form-group">
+            <label>Name or national dex number</label>
+            <input class="form-control first-chosen-pokemon" name="chosen-pokemon" type="text" />
+        </div>
+        <button class="btn btn-default" type="submit">Get Result :)</button>
 
-    <div class="form-group">
-        <label>Name or national dex number</label>
-        <input class="form-control first-chosen-pokemon" name="chosen-pokemon" type="text" />
-    </div>
-    <button class="btn btn-default" type="submit">Get Result :)</button>
+    </form>
 
-</form>
+    <div class="result-name"></div>
+    <div class="img-result"></div>
+    <div class="result"></div>
+</div>
+<div class="player2 col-sm-6">
+    <form method="post" data-request-url="@Url.Action("GetMoves", "Moves")" class="second-pokemon">
 
-<div class="result-name"></div>
-<div class="img-result"></div>
-<div class="result"></div>
-<script>
+        <div class="form-group">
+            <label>Name or national dex number</label>
+            <input class="form-control second-chosen-pokemon" name="chosen-pokemon" type="text" />
+        </div>
+        <button class="btn btn-default" type="submit">Get Result :)</button>
 
-</script>
+    </form>
+
+    <div class="result-name"></div>
+    <div class="img-result"></div>
+    <div class="result"></div>
+</div>
